# saga2d

./: BACKEND.md  CLAUDE.md  DESIGN.md  GOAL.md  PLAN.md  README.md  RETROSPECTIVE.md  generate_assets.py  pyproject.toml  verify_ui_api.py  vision.md
.kodo/: architecture.md  config.json
assetgen/: README.md  __init__.py  battle_sprites.py  battle_tiles.py  primitives.py  test_battle_tiles.py  test_sprites.py  wireframe.py
desired_examples/: README.md  actions_current.py  actions_desired.py  audio_current.py  audio_desired.py  menu_current.py  menu_desired.py  scene_stack_current.py  scene_stack_desired.py  scrolling_world_current.py  scrolling_world_desired.py  sprite_animation_current.py  sprite_animation_desired.py  ui_dialog_current.py  ui_dialog_desired.py
easygame/: __init__.py  actions.py  animation.py  assets.py  audio.py  cursor.py  game.py  input.py  save.py  scene.py
saga2d/: __init__.py  actions.py  animation.py  assets.py  audio.py  cursor.py  game.py  input.py  save.py  scene.py
tests/: __init__.py  conftest.py  generate_test_assets.py  test_actions.py  test_adversarial.py  test_animation.py  test_assets.py  test_audio.py  test_battle_vignette.py  test_camera.py  test_color_swap.py  test_cursor.py  test_drag_drop.py  test_edge_cases.py  test_fsm.py  test_game.py  test_hud.py  test_input.py  test_particles.py  test_save.py  test_scene.py  test_scene_sprites.py  test_scene_timers.py  test_screens.py  test_settings.py  test_sprite.py  test_sprite_animation.py  test_sprite_tint.py  test_theme.py  test_timer.py  test_timer_chain.py  test_tween.py  (+3 more)
(+121 files in other folders)
